Fix vertical alignment in asset rows

--- a/static/sass/screenly.scss
+++ b/static/sass/screenly.scss
@@ -191,3 +191,6 @@ input[name="file_upload"] {
     width: 38%;
     max-width: 330px;
 }
+.asset_row_btns { padding: 6px 8px 10px 8px !important; }
+.table td { vertical-align: middle !important; }
+.is_enabled-toggle { margin: 5px 0 5px 0 !important; }
